Remove the fixed gradient background on mobiles as it doesn't work very well (tends to update only after scrolling stops)

--- a/themes/greyscale/theme.css
+++ b/themes/greyscale/theme.css
@@ -299,7 +299,7 @@ footer p a			{color: #888;}
    ====================================================================================================================== */
 @media screen and (max-width: 640px) {
 
-html				{font-size: 14px;}
+html				{font-size: 14px; background: #ddd; /* mobile devices don't like fixed backgrounds */}
 
 /* prevent iPhone from zooming in when rotating */
 html, body			{width: 100%; -webkit-text-size-adjust: none;}
